top tag 불러오기 로직 수정